Generate bingo cards through javascript

--- a/builds/development/views/cards.html
+++ b/builds/development/views/cards.html
@@ -1,35 +1,1 @@
- <div class="row">
-    <div class="col-md-4">
-        <table class="table" id="bingoCard1">
-            <tr>
-                <th>B</th>
-                <th>I</th>
-                <th>N</th>
-                <th>G</th>
-                <th>O</th>
-            </tr>
-        </table>
-    </div>
-   <div class="col-md-4">
-        <table class="table" id="bingoCard2">
-            <tr>
-                <th>B</th>
-                <th>I</th>
-                <th>N</th>
-                <th>G</th>
-                <th>O</th>
-            </tr>
-        </table>
-    </div>
-    <div class="col-md-4">
-        <table class="table" id="bingoCard3">
-            <tr>
-                <th>B</th>
-                <th>I</th>
-                <th>N</th>
-                <th>G</th>
-                <th>O</th>
-            </tr>
-        </table>
-    </div>
-</div>
+ <div class="row" id="bingoCards"></div>
