Add interval timer to run the game

--- a/builds/development/views/home.html
+++ b/builds/development/views/home.html
@@ -33,7 +33,10 @@
                 </div>
                 <div class="row">
             <div id="nextNumberDiv" class="text-center">
-                <btn class="btn btn-primary" id="nextNumber">Next Number</btn>
+                <btn class="btn btn-primary" id="nextNumber">Start Game</btn>
+            </div>
+            <div id="nextNumberDiv" class="text-center">
+                <btn class="btn btn-primary" id="stopGame">Stop Game</btn>
             </div>
         </div>
             </div>
