--- a/builds/development/views/home.html
+++ b/builds/development/views/home.html
@@ -26,6 +26,21 @@
 					    </tr>
 
 					</table>
+					<div><!-- number of players selection -->
+						<label for="numOfPlayers">Number of Players: </label>
+						<select name="numOfPlayers" ng-model="numOfPlayers" ng-change="setNumberOfPlayers()">
+							<option value="2">2</option>
+							<option value="3">3</option>
+							<option value="4">4</option>
+							<option value="5">5</option>
+							<option value="6">6</option>
+							<option value="7">7</option>
+							<option value="8">8</option>
+							<option value="9">9</option>
+							<option value="10">10</option>
+						</select>
+
+					</div>
 	                </div>
 
 	                <div class="col-md-4 text-center" id="currentNumberDiv">
