Refactor methods out of the GameController that belong in the Bingo object.

--- a/builds/development/views/directives/player_selection.html
+++ b/builds/development/views/directives/player_selection.html
@@ -1,6 +1,6 @@
 <div class="form-group screenOnly">
 	<label for="selectedPlayer">Choose a Player</label>
 	<select name="selectedPlayer" ng-model="selectedPlayer" ng-change="showPlayer()">
-		<option ng-repeat="player in players" value="{{player.id}}">{{player.name}}</option>
+		<option ng-repeat="player in bingo.players" value="{{player.id}}">{{player.name}}</option>
 	</select>
 </div>
