--- a/builds/development/views/home.html
+++ b/builds/development/views/home.html
@@ -15,7 +15,7 @@
 
 	 	<div class="row text-center" id="cardsToggleDiv">
 	     	<btn class="btn btn-primary text-center" 
-	     		ng-click="toggleCards()" ng-show="players.length">{{toggleCardsMessage}}</btn>
+	     		ng-click="toggleCards()" ng-show="bingo.players.length">{{toggleCardsMessage}}</btn>
 	 	</div>
 	</section><!-- nonPrintSection -->
 
